<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CARE App</string>
    <string name="action_settings">Settings</string>
    <string name="help_settings">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="Events">Events</string>
    <string name="Todo_List">Todo List</string>
    <string name="Forms">Forms</string>
    <string name="Photos">Photos</string>
    <string name="Directory">Directory</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Resources">Resources</string>
    <string name="Calendar">Calendar</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_todo">Todo List</string>
    <string name="title_activity_forms">Forms</string>
    <string name="title_activity_photo">Photo</string>
    <string name="title_activity_directory">Directory</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_resources">Resources</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="Join_Us">Join Us</string>
    <string name="Offices">Office Locations</string>
    <string name="Improvement">Mentee Improvement Plan</string>
    <string name="Update">Weekly Update</string>
    <string name="Guidebook">Mentor Guidebook</string>
    <string name="FAQ">FAQ</string>
    <string name="Workshops">Workshops</string>
    <string name="title_activity_workshops">Workshops</string>
    <string name="Goal">Goal Setting</string>
    <string name="Time">Time Management</string>
    <string name="Debt">Understanding Debt</string>
    <string name="Coping">Coping on Campus</string>
    <string name="Active">Active Reading</string>
    <string name="Test">Test Anxiety</string>
    <string name="Habits">Winning Habits</string>
    <string name="add">Add</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="title_activity_todo_dialog">TodoDialogActivity</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_join_us_student">JoinUsStudentActivity</string>
    <string name="statePrompt">State</string>

    <string-array name="stateArray">
        <item>NJ</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>DE</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>OR</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_join_us_faculty">JoinUsFacultyActivity</string>
    <string name="title_activity_weekly_update">WeeklyUpdateActivity</string>
    <string name="title_activity_join_us_faculty_form">JoinUsFacultyFormActivity</string>
    <string name="title_activity_bus_schedule">Bus Schedule</string>

</resources>
