<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WorkshopsActivity"
    android:stretchColumns="*" >
    <TableRow         
        android:gravity="center">
        <Button 
            android:onClick="onGoalButton"
            android:text="@string/Goal" 
            android:layout_height="match_parent"
            android:gravity="center" 
            android:drawableTop="@drawable/events"
            android:layout_width="0dip"
            android:layout_weight="1" />
        <Button 
            android:onClick="onTimeButton"
            android:text="@string/Time" 
            android:layout_height="match_parent"
            android:gravity="center" 
            android:drawableTop="@drawable/todo"
            android:layout_width="0dip"
            android:layout_weight="1" />
         <Button
            android:onClick="onDebtButton" 
            android:text="@string/Debt" 
            android:layout_height="match_parent"
            android:gravity="center" 
            android:drawableTop="@drawable/forms" 
            android:layout_width="0dip"
            android:layout_weight="1" />            
    </TableRow>
    <TableRow         
        android:gravity="center">
        <Button
            android:onClick="onCopingButton"  
            android:text="@string/Coping" 
            android:layout_height="match_parent"
            android:gravity="center" 
            android:drawableTop="@drawable/photo" 
            android:layout_width="0dip"
            android:layout_weight="1" />
        <Button
            android:onClick="onActiveButton" 
            android:text="@string/Active" 
            android:layout_height="match_parent"
            android:gravity="center" 
            android:drawableTop="@drawable/directory" 
            android:layout_width="0dip"
            android:layout_weight="1" />            
          <Button
            android:onClick="onTestButton"  
            android:text="@string/Test" 
            android:layout_height="match_parent"
            android:gravity="center" 
            android:drawableTop="@drawable/contact_us" 
            android:layout_width="0dip"
            android:layout_weight="1" />            
    </TableRow>
    <TableRow         
        android:gravity="center">
        <Button
            android:onClick="onHabitsButton" 
            android:text="@string/Habits" 
            android:layout_height="match_parent"
            android:gravity="center" 
            android:drawableTop="@drawable/resources" 
            android:layout_width="0dip"
            android:layout_weight="1" /> 
                       
        <!-- place holder -->
        <Button 
            android:text="@string/Events" 
            android:layout_height="match_parent"
            android:gravity="center" 
 			android:visibility="invisible"
            android:enabled="false"
            android:drawableTop="@drawable/events" 
            android:layout_width="0dip"
            android:layout_weight="1" />            
       
        <!-- place holder -->
        <Button 
            android:text="@string/Events" 
            android:layout_height="match_parent"
            android:gravity="center" 
 			android:visibility="invisible"
            android:enabled="false"
            android:drawableTop="@drawable/events" 
            android:layout_width="0dip"
            android:layout_weight="1" />            
        
    </TableRow>

</TableLayout>